--- a/mscore/manual/sources/MuseScore-cs.html
+++ b/mscore/manual/sources/MuseScore-cs.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_2a9635d5b3e3e78e6c3ac7d6e2ea4460.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_6cb741b0b9ffae8461fdb5153d263783.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"cs"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"cs","destination":"destination=print%2Fbook%2Fexport%2Fhtml%2F11825"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/cs/p%C5%99%C3%ADru%C4%8Dka/p%C5%99%C3%ADru%C4%8Dka' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8ece819a39a205bd87b1b5c87f104921.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_97bc1c895cd998afadc2e961b7dfb5ab.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Svobodný program pro skládání hudby a notový zápis</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/cs">http://musescore.org</a> on Čt, 08/16/2012</div>
+    <div class="print-site_name">Získáno z <a href="http://musescore.org/cs">http://musescore.org</a> Po, 18. 02. 2013 </div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -1179,7 +1179,7 @@ Stažení <a class="freelinking external" href="http://freepats.zenvoid.org/sf2/
 </div>
 <div id="node-17704" class="section-2">
   <h1 class="book-heading">Text</h1>
-  <p>Předchozí kapitola pokrývá <a href="http://musescore.org/cs/tempo" title="Tempo">texty ovlivňující přehrávání tempa</a>, ale v MuseScore je mnoho jiných typů textu: <a href="http://musescore.org/cs/text-písně" title="Text písně">slova písně</a>, <a href="http://musescore.org/cs/název-akordu" title="Název akordu">názvy akordů</a>, <a href="http://musescore.org/cs/dynamika" title="Dynamika">označení dynamiky</a>, <a href="http://musescore.org/cs/prstoklad" title="Prstoklad">prstoklad</a>, záhlaví a mnoho dalších. Všechny jsou přístupné z hlavní nabídky přes <kbd><samp class="menu">Vytvoření</samp> → <samp class="submenu">Text</samp></kbd>. </p>
+  <p>Předchozí kapitola pokrývá <a href="http://musescore.org/cs/tempo" title="Tempo">texty ovlivňující přehrávání tempa</a>, ale v MuseScore je mnoho jiných typů textu: <a href="http://musescore.org/cs/příručka/text/text-písně" title="Text písně">slova písně</a>, <a href="http://musescore.org/cs/název-akordu" title="Název akordu">názvy akordů</a>, <a href="http://musescore.org/cs/dynamika" title="Dynamika">označení dynamiky</a>, <a href="http://musescore.org/cs/prstoklad" title="Prstoklad">prstoklad</a>, záhlaví a mnoho dalších. Všechny jsou přístupné z hlavní nabídky přes <kbd><samp class="menu">Vytvoření</samp> → <samp class="submenu">Text</samp></kbd>. </p>
 <p>Pro krátký obecný text bez dalších funkcí použijte nejlépe text pro jednu notovou osnovu nebo pro všechny osnovy. Rozdíl mezi těmito dvěma druhy textu je v tom, zda jej chcete použít na jednu osnovu nebo na všechny osnovy. To dělá rozdíl při <a href="http://musescore.org/cs/vytažení-hlasů-skladby" title="Vytažení hlasů skladby">vytahování jednotlivých hlasů</a>.</p>
   <div id="node-12793" class="section-3">
   <h1 class="book-heading">Styl textu</h1>
@@ -1199,7 +1199,7 @@ Stažení <a class="freelinking external" href="http://freepats.zenvoid.org/sf2/
 <ul>
 <li><strong>Název, podnázev, skladatel, básník</strong>: anchored to page</li>
 <li><strong><a href="http://musescore.org/cs/prstoklad" title="Prstoklad">Prstoklad</a></strong>: Prstoklady jsou ukotveny k hlavičkám not.</li>
-<li><strong><a href="http://musescore.org/cs/text-písně" title="Text písně">Text písně</a></strong>: Slova písně jsou ukotvena k časové poloze.</li>
+<li><strong><a href="http://musescore.org/cs/příručka/text/text-písně" title="Text písně">Text písně</a></strong>: Slova písně jsou ukotvena k časové poloze.</li>
 <li><strong><a href="http://musescore.org/cs/název-akordu" title="Název akordu">Název akordu</a></strong>: Názvy akordů jsou také ukotveny k časové poloze.</li>
 <li><strong>Velká osnova (systém)</strong>: Vztahuje se ke všem notovým osnovám v systému osnov.* Ukotvena k časové poloze.</li>
 <li><strong>Osnova</strong>: Vztahuje se k jedné notové osnově.* Ukotvena k časové poloze.</li>
@@ -1226,7 +1226,7 @@ Stažení <a class="freelinking external" href="http://freepats.zenvoid.org/sf2/
 <h3>Symboly a zvláštní znaky</h3>
 <p>Můžete do svého textu vložit čtvrťové noty, zalomení a další zvláštní znaky jako symboly. Dvakrát klepněte levým tlačítkem myši na text, a pak v panelu pro úpravy textu klepněte na ikonu klávesnice. Otevře se paleta s textovými symboly.</p>
 <p><img src="/sites/musescore.org/files/special-text-symbols-button_cs_0_0.png" alt="Paleta s textovými symboly obsahuje tlačítka pro vkládání symbolů do textu, jako jsou čtvrťové noty nebo zvláštní znaky, jako je symbol pro autorské právo nebo písmena s akcenty." title="Paleta s textovými symboly obsahuje tlačítka pro vkládání symbolů do textu, jako jsou čtvrťové noty nebo zvláštní znaky, jako je symbol pro autorské právo nebo písmena s akcenty." width="700" height="311" class="inline" /></p>
-<p>Podívejte se také na: <a href="http://musescore.org/cs/název-akordu" title="Název akordu">Název akordu</a>, <a href="http://musescore.org/cs/text-písně" title="Text písně">Text písně</a>, <a href="http://musescore.org/cs/rámečky" title="Rámečky">Rámečky</a>, <a href="http://musescore.org/cs/režim-úprav" title="Režim úprav">Režim úprav</a></p>
+<p>Podívejte se také na: <a href="http://musescore.org/cs/název-akordu" title="Název akordu">Název akordu</a>, <a href="http://musescore.org/cs/příručka/text/text-písně" title="Text písně">Text písně</a>, <a href="http://musescore.org/cs/rámečky" title="Rámečky">Rámečky</a>, <a href="http://musescore.org/cs/režim-úprav" title="Režim úprav">Režim úprav</a></p>
 <div class="field field-type-filefield field-field-file">
     <div class="field-items">
             <div class="field-item odd">
@@ -1309,6 +1309,13 @@ Stažení <a class="freelinking external" href="http://freepats.zenvoid.org/sf2/
 <li>Pouze Mac: <kbd><kbd>⌥</kbd>+<kbd>_</kbd></kbd> vloží do textu písně podtržení (<samp>_</samp>)</li>
 </ul>
 <p>Podívejte se také na: <a href="http://musescore.org/cs/text" title="Text">Text</a>, <a href="http://musescore.org/cs/název-akordu" title="Název akordu">Název akordu</a>.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Příloha</th><th>Velikost</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/lyric%20slur.jpg">lyric slur.jpg</a></td><td>4.25 KB</td> </tr>
+ <tr class="even"><td><a href="http://musescore.org/sites/musescore.org/files/Keyboardico.png">Keyboardico.png</a></td><td>967 bajtů</td> </tr>
+</tbody>
+</table>
   </div>
 </div>
 <div id="node-17705" class="section-2">
@@ -1738,7 +1745,7 @@ Decrescendo: <kbd><kbd>Shift</kbd>+<kbd>H</kbd></kbd></p>
 Další slabika textu písně: <kbd><kbd>Ctrl</kbd>+<kbd>Right</kbd></kbd></p>
 <p>Nahoru k předchozí sloce: <kbd><kbd>Ctrl</kbd>+<kbd>Up</kbd></kbd> (Mac: <kbd><kbd>⌘</kbd>+<kbd>Up</kbd></kbd>)<br />
 Dolů na další sloku: <kbd><kbd>Ctrl</kbd>+<kbd>Down</kbd></kbd> (Mac: <kbd><kbd>⌘</kbd>+<kbd>Down</kbd></kbd>)</p>
-<p><i>Další klávesové zkratky pro text písně najdete v kapitole <a href="http://musescore.org/cs/text-písně" title="Text písně">Text písně</a></i></p>
+<p><i>Další klávesové zkratky pro text písně najdete v kapitole <a href="http://musescore.org/cs/příručka/text/text-písně" title="Text písně">Text písně</a></i></p>
 <h3>Zobrazení</h3>
 <p>Pohyb v notách: <kbd><kbd>F12</kbd></kbd> (Mac: <kbd><kbd>⌥</kbd>+<kbd>⌘</kbd>+<kbd>N</kbd></kbd>)<br />
 Přehrávací panel: <kbd><kbd>F11</kbd></kbd> (Mac: <kbd><kbd>⌥</kbd>+<kbd>⌘</kbd>+<kbd>P</kbd></kbd>)<br />
