--- a/mscore/manual/sources/MuseScore-da.html
+++ b/mscore/manual/sources/MuseScore-da.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_0552503edfe428fcab8bee31924c7d89.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_670b12d3d91a0a5a58ed145561f3cb74.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"da"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"da","destination":"destination=print%2Fbook%2Fexport%2Fhtml%2F1947"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/da/h%C3%A5ndbog/h%C3%A5ndbog' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8ece819a39a205bd87b1b5c87f104921.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_97bc1c895cd998afadc2e961b7dfb5ab.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Gratis software til komposition og nodeskrivning</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/da">http://musescore.org</a> on tor, 08/16/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/da">http://musescore.org</a> on man, 02/18/2013</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -933,6 +933,13 @@ Tre populære GM-lydbiblioteker af forskellig størrelse er flg,:</p>
 <li>Kun for Mac: <kbd><kbd>⌥</kbd>+<kbd>_</kbd></kbd> indsætter understregning (<samp>_</samp>) i sangteksten</li>
 </ul>
 <p>Se også: <a href="http://musescore.org/da/håndbog/tekstredigering" title="Tekstredigering">Tekstredigering</a>, <a href="http://musescore.org/da/håndbog/akkordbetegnelser" title="Akkordbetegnelser">Akkordbetegnelser</a>.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Bilag</th><th>Størrelse</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/lyric%20slur.jpg">lyric slur.jpg</a></td><td>4.25 kB</td> </tr>
+ <tr class="even"><td><a href="http://musescore.org/sites/musescore.org/files/Keyboardico.png">Keyboardico.png</a></td><td>967 bytes</td> </tr>
+</tbody>
+</table>
   </div>
 </div>
 <div id="node-7047" class="section-2">
