--- a/mscore/manual/sources/MuseScore-es.html
+++ b/mscore/manual/sources/MuseScore-es.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_1289d2e695df3d01a4b3a1d3ddfcbfdd.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_3c069301a28c06429ec777389db78756.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"es"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"es","destination":"destination=print%2Fbook%2Fexport%2Fhtml%2F137"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/es/manual/manual' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8ece819a39a205bd87b1b5c87f104921.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_97bc1c895cd998afadc2e961b7dfb5ab.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Programa libre de notación musical</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/es">http://musescore.org</a> on Jue, 08/16/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/es">http://musescore.org</a> on Lun, 02/18/2013</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -1131,6 +1131,13 @@ Las sílabas son conectadas con un guión.</li>
 <li>Sólo para Mac: <kbd><kbd>⌥</kbd>+<kbd>_</kbd></kbd> introduce un guión bajo (<samp>_</samp>) en el texto de la letra</li>
 </ul>
 <p>Ver también: <a href="http://musescore.org/es/manual/texto" title="Texto">Texto</a>, <a href="http://musescore.org/es/manual/nombres-de-acordes" title="Nombres de acordes">Nombres de acordes</a>.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Adjunto</th><th>Tamaño</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/lyric%20slur.jpg">lyric slur.jpg</a></td><td>4.25 KB</td> </tr>
+ <tr class="even"><td><a href="http://musescore.org/sites/musescore.org/files/Keyboardico.png">Keyboardico.png</a></td><td>967 bytes</td> </tr>
+</tbody>
+</table>
   </div>
 <div id="node-150" class="section-3">
   <h1 class="book-heading">Nombres de acordes</h1>
@@ -1395,7 +1402,7 @@ Por otro lado, cuando la <a class="freelinking external" href="http://musescore.
 <ul>
 <li><a class="freelinking external" href="http://prereleases.musescore.org/windows/nightly/">Compilaciones diarias para Windows</a></li>
 <li><a class="freelinking external" href="http://prereleases.musescore.org/macosx/nightly/">Compilaciones diarias para Mac OS X</a></li>
-<li><a class="freelinking external" href="http://BernsteinForPresident.com/musescore-nightly">Compilaciones diarias para GNU/Linux</a></li>
+<li><a class="freelinking external" href="http://prereleases.musescore.org/linux/nightly/ ">Compilaciones diarias para GNU/Linux</a></li>
 </ul>
 <h3>Resumen</h3>
 <table>
