--- a/mscore/manual/sources/MuseScore-fr.html
+++ b/mscore/manual/sources/MuseScore-fr.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_9d0346a6cc431f8cc8e017a840f6f8a8.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_0d43267d0341c31f4408b1e9fabd6399.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"fr"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"fr","destination":"destination=print%2Fbook%2Fexport%2Fhtml%2F115"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/fr/manuel/manuel' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8ece819a39a205bd87b1b5c87f104921.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_97bc1c895cd998afadc2e961b7dfb5ab.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Éditeur de partitions gratuit et libre</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Recupéré depuis <a href="http://musescore.org/fr">http://musescore.org</a> le jeu, 16/08/2012</div>
+    <div class="print-site_name">Recupéré depuis <a href="http://musescore.org/fr">http://musescore.org</a> le lun, 18/02/2013</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -1097,6 +1097,13 @@ Les éléments de texte sont créés avec un <i>Style de texte</i>. Ce style dé
 <li>Mac seulement : <kbd><kbd>⌥</kbd>+<kbd>_</kbd></kbd> ajoute un souligné (<samp>_</samp>) au texte des paroles</li>
 </ul>
 <p>Voir aussi : <a href="http://musescore.org/fr/manuel/texte" title="Texte">Texte</a>, <a href="http://musescore.org/fr/manuel/nom-daccord" title="Nom d&#039;accord">Nom d&#039;accord</a>.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Fichier attaché</th><th>Taille</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/lyric%20slur.jpg">lyric slur.jpg</a></td><td>4.25 Ko</td> </tr>
+ <tr class="even"><td><a href="http://musescore.org/sites/musescore.org/files/Keyboardico.png">Keyboardico.png</a></td><td>967 octets</td> </tr>
+</tbody>
+</table>
   </div>
 </div>
 <div id="node-801" class="section-2">
