--- a/mscore/manual/sources/MuseScore-gl.html
+++ b/mscore/manual/sources/MuseScore-gl.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_d3c5588fa4936d285645dfbe13f385a8.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_3353484f0f130bc604c44f48b985d177.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"gl"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"gl","destination":"destination=print%2Fbook%2Fexport%2Fhtml%2F534"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/gl/manual-galego/manual-en-galego' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8ece819a39a205bd87b1b5c87f104921.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_97bc1c895cd998afadc2e961b7dfb5ab.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Software libre de composición e notación musical</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/gl">http://musescore.org</a> on Xov, 08/16/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/gl">http://musescore.org</a> on Lun, 02/18/2013</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -1001,6 +1001,13 @@ Ao premer o botón Reproducir <img src="/sites/musescore.org/files/play.png" alt
 <li>Só no Mac: <kbd><kbd>⌥</kbd>+<kbd>_</kbd></kbd> introduce un guión baixo (<samp>_</samp>) no texto da letra</li>
 </ul>
 <p>Vexa tamén: <a href="http://musescore.org/gl/manual-galego/textos" title="Textos">Textos</a>, <a href="http://musescore.org/gl/manual-galego/nomes-dos-acordes" title="Nomes dos acordes">Nomes dos acordes</a>.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Adxunto</th><th>Tamaño</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/lyric%20slur.jpg">lyric slur.jpg</a></td><td>4.25 KB</td> </tr>
+ <tr class="even"><td><a href="http://musescore.org/sites/musescore.org/files/Keyboardico.png">Keyboardico.png</a></td><td>1 byte</td> </tr>
+</tbody>
+</table>
   </div>
 </div>
 <div id="node-528" class="section-2">
