--- a/mscore/manual/sources/MuseScore-nl.html
+++ b/mscore/manual/sources/MuseScore-nl.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_c1fc82a0e6427743b17816d57b6d7494.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_1a80a9be29c1de27ecc8c7e9328f55ff.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"nl"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"nl","destination":"destination=print%2Fbook%2Fexport%2Fhtml%2F375"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/nl/handboek/handboek' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8ece819a39a205bd87b1b5c87f104921.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_97bc1c895cd998afadc2e961b7dfb5ab.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Gratis muzieknotatiesoftware</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Afgehaald van <a href="http://musescore.org/nl">http://musescore.org</a> op do, 16/08/2012</div>
+    <div class="print-site_name">Afgehaald van <a href="http://musescore.org/nl">http://musescore.org</a> op ma, 18/02/2013</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -219,6 +219,8 @@ yum localinstall musescore-0.9.4-1.fc10.x86_64.rpm</pre></li>
 <li><kbd><kbd>8</kbd></kbd>:            Dubbele hele noot (breve)
 </li>
 <li><kbd><kbd>9</kbd></kbd>:            Dubbele dubbele hele noot (Longa)
+</li>
+<li><kbd><kbd>0</kbd></kbd>:            Rust
 </li>
 <li><kbd><kbd>.</kbd></kbd>: Een tijd (punt) verandert de duur van een noot</li>
 <p>In versie 0.9.3 of eerder zijn de sneltoetsen tijdens het invoeren voor de duur van een noot:</p>
@@ -418,7 +420,7 @@ De bestandsextensie MSC levert nog wel eens conflicten op Microsoft Windows en w
 </div>
 <div id="node-383" class="section-2">
   <h1 class="book-heading">Notatie</h1>
-  <p>In het "Basis concepten" hoofdstuk leerde je hoe <a href="http://musescore.org/nl/freelinking/Noten%20ingeven" class="freelinking noexist" rel="nofollow">noten in te geven</a> en te werken met het <a href="http://musescore.org/nl/handboek/palet" title="palet">palet</a>. Het "Notatie" hoofdstuk beschrijft de verschillende types van notatie in meer detail inclusief meer geavanceerde muziek notatie.</p>
+  <p>In het "Basis concepten" hoofdstuk leerde je hoe <a href="http://musescore.org/nl/handboek/noten-invoeren" title="Noten invoeren">noten in te geven</a> en te werken met het <a href="http://musescore.org/nl/handboek/palet" title="palet">palet</a>. Het "Notatie" hoofdstuk beschrijft de verschillende types van notatie in meer detail inclusief meer geavanceerde muziek notatie.</p>
   <div id="node-431" class="section-3">
   <h1 class="book-heading">Ademhaling en pauze</h1>
   <p>Om een <strong>ademhalingssymbool</strong> te plaatsen, sleept u het ademhalingssymbool het van het ademhalingspalet naar een noot in de partituur.</p>
@@ -753,25 +755,26 @@ Wanneer je de handvatten beweegt, wordt er een stippellijn van de verschuivende 
 <div id="node-440" class="section-3">
   <h1 class="book-heading">Waardestrepen</h1>
   <p><strong>Waardestrepen</strong> worden automatisch gezet maar de automatische instelling kan handmatig overschreven worden. Sleep het waardestreepsymbool van het waardestrepenpalet naar een noot waarvan je de waardestreep wilt veranderen.<br />
-<img src="/sites/musescore.org/files/waardestrepen2_nl_0.png" alt="Waardestrepen palet" title="Waardestrepen palet" width="189" height="69" class="inline" /></p>
+<img src="/sites/musescore.org/files/beam-palette_0.png" alt="Waardestrepen palet" title="Waardestrepen palet" width="135" height="60" class="inline" /> </p>
 <p>U kunt ook eerst een noot selecteren en dan dubbel klikken op het juiste symbool in het waardestreep palet.<br />
 <img src="/sites/musescore.org/files/beambutton1_0.png" alt="Begin waardestreep button" title="Begin waardestreep button" width="29" height="28" class="inline" /> 	   	Begin een waardstreep op deze noot.<br />
 <img src="/sites/musescore.org/files/beambutton2_0.png" alt="Midden waardestreep button" title="Midden waardestreep button" width="29" height="28" class="inline" /> 		Verleng een waardestreep op deze noot.<br />
-<img src="/sites/musescore.org/files/beambutton3_0.png" alt="Geen waardestreep button" title="Geen waardestreep button" width="29" height="28" class="inline" /> 		Gebruik geen waardestreep voor deze noot.<br />
-<img src="/sites/musescore.org/files/beambutton4_1.png" alt="Begin onderliggende waardestreep button" title="Begin onderliggende waardestreep button" width="29" height="28" class="inline" /> 		Start een onderliggende waardestreep op deze noot. (Nog niet geïmplementeerd in de huidige versies van MuseScore)</p>
-<p>Zie ook: <a href="http://musescore.org/nl/handboek/balkoverschrijdende-waardestrepen" title="Balkoverschrijdende waardestrepen">Balkoverschrijdende waardestrepen</a></p>
+<img src="/sites/musescore.org/files/beambutton3_0.png" alt="Geen waardestreep button" title="Geen waardestreep button" width="29" height="28" class="inline" /> 		Gebruik geen waardestreep voor deze noot.</p>
+<p>'A'   = (terug naar) Automatische modus: de modus die MuseScore zal kiezen bij noteningave, afhankelijk van de maatsoort.</p>
+<p>Om de hoek van de waardestreep of de afstand tot de waardestreep tot de noten (i.e. de lengte van de nootstok) aan te passen, dubbel klik op de waardestreep om het in <samp class="mode"><a href="http://musescore.org/nl/handboek/wijzigingsmodus" title="Wijzigingsmodus">Wijzigingsmodus</a></samp> te brengen, waarbij de rechter handgreep is geselecteerd. De naar boven/beneden pijltjestoets kunnen nu de hoek veranderen. Selecteer de linker handgreepl en gebruik de naar boven/beneden pijltjestoetsen om de lengte van de notenstokken te verlengen or verkleinen. Duw <kbd><kbd>Esc</kbd></kbd> om zijn de wijzigingsmodus te gaan, eens alle aanpassingen zijn toegepast. </p>
+<p>Om een waardestreep van boven naar onder de noten te verplaatsen, of omgekeerd, gebruik de  <img src="/sites/musescore.org/files/flipdirection.png" /> knop links van de stem knoppen in de werkbalken of gebruik de <kbd><kbd>X</kbd></kbd> toets. </p>
+<h3>Zie ook</h3>
+<ul>
+<li><a href="http://musescore.org/nl/handboek/balkoverschrijdende-waardestrepen" title="Balkoverschrijdende waardestrepen">Balkoverschrijdende waardestrepen</a></li>
+<li><a href="http://musescore.org/nl/handboek/wijzigingsmodus" title="Wijzigingsmodus">Wijzigingsmodus</a></li>
+<li><a href="http://musescore.org/nl/handboek/noten-invoeren" title="Noten Invoeren">Noten Invoeren</a></li>
+</ul>
 <div class="field field-type-filefield field-field-file">
     <div class="field-items">
             <div class="field-item odd">
                     <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"><img class="field-icon-image-png"  alt="image/png icon" src="http://musescore.org/sites/all/modules/filefield/icons/protocons/16x16/mimetypes/image-x-generic.png" /></div><a href="http://musescore.org/sites/musescore.org/files/waardestrepen2_nl_0.png" type="image/png; length=2366">waardestrepen2_nl.png</a></div>        </div>
         </div>
 </div>
-<table id="attachments" class="sticky-enabled">
- <thead><tr><th>Bijlage</th><th>Grootte</th> </tr></thead>
-<tbody>
- <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/beam-palette_0.png">beam-palette.png</a></td><td>2.58 KB</td> </tr>
-</tbody>
-</table>
   </div>
 </div>
 <div id="node-408" class="section-2">
@@ -988,6 +991,13 @@ Op dit punt heeft de tekst van de notenbalk de funktie van aanduiding maar heeft
 <li>Mac only: <kbd><kbd>⌥</kbd>+<kbd>_</kbd></kbd> plaatst een underscore (<samp>_</samp>) in de liedtekst</li>
 </ul>
 <p>Zie ook: <a href="http://musescore.org/nl/handboek/tekst" title="Tekst">Tekst</a>, <a href="http://musescore.org/nl/handboek/akkoordnamen" title="Akkoordnamen">Akkoordnamen</a>.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Bijlage</th><th>Grootte</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/lyric%20slur.jpg">lyric slur.jpg</a></td><td>4.25 KB</td> </tr>
+ <tr class="even"><td><a href="http://musescore.org/sites/musescore.org/files/Keyboardico.png">Keyboardico.png</a></td><td>967 bytes</td> </tr>
+</tbody>
+</table>
   </div>
 </div>
 <div id="node-413" class="section-2">
