--- a/mscore/manual/sources/MuseScore-pt-br.html
+++ b/mscore/manual/sources/MuseScore-pt-br.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_1f8b84d281d636e364811ac1fb040f49.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_86684c01aa1fb778ecf74e63a87be760.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"pt-br"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"pt-br","destination":"destination=print%2Fbook%2Fexport%2Fhtml%2F1248"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/pt-br/manual-pt-br/manual' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8ece819a39a205bd87b1b5c87f104921.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_97bc1c895cd998afadc2e961b7dfb5ab.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Software livre de composição e partitura musical</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/pt-br">http://musescore.org</a> on qui, 08/16/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/pt-br">http://musescore.org</a> on seg, 02/18/2013</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -1187,6 +1187,13 @@ Pressionando o botão Tocar <img src="/sites/musescore.org/files/play.png" alt="
 <li>Apenas no Mac: <kbd><kbd>⌥</kbd>+<kbd>_</kbd></kbd> insere um sublinhado (<samp>_</samp>) no texto da letra</li>
 </ul>
 <p>Veja também: <a href="http://musescore.org/pt-br/manual-pt-br/texto" title="Texto">Texto</a>, <a href="http://musescore.org/pt-br/manual-pt-br/cifragem-de-acordes" title="Cifragem de acordes">Cifragem de acordes</a>.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Anexo</th><th>Tamanho</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/lyric%20slur.jpg">lyric slur.jpg</a></td><td>4.25 KB</td> </tr>
+ <tr class="even"><td><a href="http://musescore.org/sites/musescore.org/files/Keyboardico.png">Keyboardico.png</a></td><td>967 bytes</td> </tr>
+</tbody>
+</table>
   </div>
 </div>
 <div id="node-2716" class="section-2">
