--- a/mscore/manual/sources/MuseScore-ro.html
+++ b/mscore/manual/sources/MuseScore-ro.html
@@ -4,16 +4,16 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_3e85f7862467ade5236795fd883738ea.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_c4c11a7986863305cd69d7f2cbfdee68.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"ro"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx|bz2"},"syntaxhighlighter":null,"musescore":{"ytlang":"ro","destination":"destination=print%2Fbook%2Fexport%2Fhtml%2F3081"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://musescore.org/ro/manual/manual' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon_11.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_8ece819a39a205bd87b1b5c87f104921.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_97bc1c895cd998afadc2e961b7dfb5ab.css" />
   </head>
   <body>
         <div class="print-logo"><img class='print-logo' src='/sites/musescore.org/files/musescore-logo.png' alt='' />
@@ -21,7 +21,7 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
     <div class="print-slogan">Software gratuit pentru compoziție și notație muzicală</div>
     <p></p>
     <hr class="print-hr" />
-    <div class="print-site_name">Retrieved from <a href="http://musescore.org/ro">http://musescore.org</a> on Joi, 08/16/2012</div>
+    <div class="print-site_name">Retrieved from <a href="http://musescore.org/ro">http://musescore.org</a> on Lun, 02/18/2013</div>
     <h1 class="print-title"></h1>
     <div class="print-submitted"></div>
     <div class="print-created"></div>
@@ -886,6 +886,13 @@ Dacă, însă, se dorește ca redarea să se facă doar pentru o singură voce, 
 <li>doar pentru Mac: combinația <kbd><kbd>⌥</kbd>+<kbd>_</kbd></kbd> introduce un semn de subliniere (<i>underscore</i>) (<samp>_</samp>) în textul versurilor</li>
 </ul>
 <p>Studiați și: <a href="http://musescore.org/ro/manual/texte" title="Texte">Texte</a>, <a href="http://musescore.org/ro/manual/numele-acordului" title="Numele acordului">Numele acordului</a>.</p>
+<table id="attachments" class="sticky-enabled">
+ <thead><tr><th>Ataşament</th><th>Mărime</th> </tr></thead>
+<tbody>
+ <tr class="odd"><td><a href="http://musescore.org/sites/musescore.org/files/lyric%20slur.jpg">lyric slur.jpg</a></td><td>4.25 KB</td> </tr>
+ <tr class="even"><td><a href="http://musescore.org/sites/musescore.org/files/Keyboardico.png">Keyboardico.png</a></td><td>967 octeţi</td> </tr>
+</tbody>
+</table>
   </div>
 </div>
 <div id="node-4682" class="section-2">
